project/edu/purdue/cs352/minijava/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
    package edu.purdue.cs352.minijava.parser;
    import edu.purdue.cs352.minijava.ast.*;
    import java.util.*;

    public class Parser implements ParserConstants {
        public static void main(String[] args) {
            Parser parser;

            if (args.length != 1) {
                System.out.println("Use: mjparse <input file>");
                return;
            }

            try {
                parser = new Parser(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try {
                parser.Program();
            } catch (ParseException ex) {
                System.out.println(ex.getMessage());
                return;
            }
        }

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
  final public List<Token> TokenList() throws ParseException {Token t;
    List<Token> tl = new ArrayList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:
      case KW_PUBLIC:
      case KW_STATIC:
      case KW_VOID:
      case KW_MAIN:
      case KW_STRING:
      case KW_EXTENDS:
      case KW_RETURN:
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_ELSE:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_SYSPRNT:
      case SYM_LBRACE:
      case SYM_RBRACE:
      case SYM_LPAREN:
      case SYM_RPAREN:
      case SYM_LBRACK:
      case SYM_RBRACK:
      case SYM_SEMICOL:
      case SYM_EQ:
      case SYM_LOGAND:
      case SYM_LOGOR:
      case SYM_LESS:
      case SYM_LESSEQ:
      case SYM_EQEQ:
      case SYM_NOTEQ:
      case SYM_GREAT:
      case SYM_GREATEQ:
      case SYM_PLUS:
      case SYM_MINUS:
      case SYM_MULTIL:
      case SYM_DIVIDE:
      case SYM_MOD:
      case SYM_NOT:
      case SYM_DOT:
      case SYM_COMMA:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Token();
tl.add(t);
    }
    jj_consume_token(0);
{if ("" != null) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public Token Token() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_CLASS:{
      jj_consume_token(KW_CLASS);
      break;
      }
    case KW_PUBLIC:{
      jj_consume_token(KW_PUBLIC);
      break;
      }
    case KW_STATIC:{
      jj_consume_token(KW_STATIC);
      break;
      }
    case KW_VOID:{
      jj_consume_token(KW_VOID);
      break;
      }
    case KW_MAIN:{
      jj_consume_token(KW_MAIN);
      break;
      }
    case KW_STRING:{
      jj_consume_token(KW_STRING);
      break;
      }
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      break;
      }
    case KW_RETURN:{
      jj_consume_token(KW_RETURN);
      break;
      }
    case KW_INT:{
      jj_consume_token(KW_INT);
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      break;
      }
    case KW_ELSE:{
      jj_consume_token(KW_ELSE);
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      break;
      }
    case KW_SYSPRNT:{
      jj_consume_token(KW_SYSPRNT);
      break;
      }
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      break;
      }
    case SYM_RBRACE:{
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case SYM_LPAREN:{
      jj_consume_token(SYM_LPAREN);
      break;
      }
    case SYM_RPAREN:{
      jj_consume_token(SYM_RPAREN);
      break;
      }
    case SYM_LBRACK:{
      jj_consume_token(SYM_LBRACK);
      break;
      }
    case SYM_RBRACK:{
      jj_consume_token(SYM_RBRACK);
      break;
      }
    case SYM_SEMICOL:{
      jj_consume_token(SYM_SEMICOL);
      break;
      }
    case SYM_EQ:{
      jj_consume_token(SYM_EQ);
      break;
      }
    case SYM_LOGAND:{
      jj_consume_token(SYM_LOGAND);
      break;
      }
    case SYM_LOGOR:{
      jj_consume_token(SYM_LOGOR);
      break;
      }
    case SYM_LESS:{
      jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESSEQ:{
      jj_consume_token(SYM_LESSEQ);
      break;
      }
    case SYM_EQEQ:{
      jj_consume_token(SYM_EQEQ);
      break;
      }
    case SYM_NOTEQ:{
      jj_consume_token(SYM_NOTEQ);
      break;
      }
    case SYM_GREAT:{
      jj_consume_token(SYM_GREAT);
      break;
      }
    case SYM_GREATEQ:{
      jj_consume_token(SYM_GREATEQ);
      break;
      }
    case SYM_PLUS:{
      jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      jj_consume_token(SYM_MINUS);
      break;
      }
    case SYM_MULTIL:{
      jj_consume_token(SYM_MULTIL);
      break;
      }
    case SYM_DIVIDE:{
      jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      jj_consume_token(SYM_MOD);
      break;
      }
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      break;
      }
    case SYM_DOT:{
      jj_consume_token(SYM_DOT);
      break;
      }
    case SYM_COMMA:{
      jj_consume_token(SYM_COMMA);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
  }

// Grammar
  final public void Program() throws ParseException {
    MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      ClassDeclaration();
    }
    jj_consume_token(0);
  }

  final public void MainClass() throws ParseException {
    jj_consume_token(KW_CLASS);
    Identifier();
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPAREN);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LBRACK);
    jj_consume_token(SYM_RBRACK);
    Identifier();
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
  }

  final public void ClassDeclaration() throws ParseException {
    jj_consume_token(KW_CLASS);
    Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      Identifier();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      VarDeclaration();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      MethodDeclaration();
    }
    jj_consume_token(SYM_RBRACE);
  }

  final public void VarDeclaration() throws ParseException {
    Type();
    Identifier();
    jj_consume_token(SYM_SEMICOL);
  }

  final public void MethodDeclaration() throws ParseException {
    jj_consume_token(KW_PUBLIC);
    Type();
    Identifier();
    jj_consume_token(SYM_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:{
      Type();
      Identifier();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        Type();
        Identifier();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    label_6:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_6;
      }
      VarDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_SYSPRNT:
      case SYM_LBRACE:
      case SYM_LPAREN:
      case SYM_NOT:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(KW_RETURN);
    Expression();
    jj_consume_token(SYM_SEMICOL);
    jj_consume_token(SYM_RBRACE);
  }

  final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:{
      jj_consume_token(KW_INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACK:{
        jj_consume_token(SYM_LBRACK);
        jj_consume_token(SYM_RBRACK);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case IDENTIFIER:{
      Identifier();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_SYSPRNT:
        case SYM_LBRACE:
        case SYM_LPAREN:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPAREN);
      Expression();
      jj_consume_token(SYM_RPAREN);
      Statement();
      if (jj_2_2(2)) {
        jj_consume_token(KW_ELSE);
        Statement();
      } else {
        ;
      }
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPAREN);
      Expression();
      jj_consume_token(SYM_RPAREN);
      Statement();
      break;
      }
    case KW_SYSPRNT:{
      jj_consume_token(KW_SYSPRNT);
      jj_consume_token(SYM_LPAREN);
      Expression();
      jj_consume_token(SYM_RPAREN);
      jj_consume_token(SYM_SEMICOL);
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case SYM_NOT:
    case IDENTIFIER:
    case INT_LITERAL:{
      Expression();
      jj_consume_token(SYM_SEMICOL);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Expression() throws ParseException {
    AssignExpr();
  }

  final public void AssignExpr() throws ParseException {
    LogicOp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_EQ:{
      jj_consume_token(SYM_EQ);
      AssignExpr();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  final public void LogicOp() throws ParseException {
    CmpOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LOGAND:
      case SYM_LOGOR:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LOGAND:{
        jj_consume_token(SYM_LOGAND);
        break;
        }
      case SYM_LOGOR:{
        jj_consume_token(SYM_LOGOR);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      CmpOp();
    }
  }

  final public void CmpOp() throws ParseException {
    AddOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:
      case SYM_LESSEQ:
      case SYM_EQEQ:
      case SYM_NOTEQ:
      case SYM_GREAT:
      case SYM_GREATEQ:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:{
        jj_consume_token(SYM_LESS);
        break;
        }
      case SYM_LESSEQ:{
        jj_consume_token(SYM_LESSEQ);
        break;
        }
      case SYM_EQEQ:{
        jj_consume_token(SYM_EQEQ);
        break;
        }
      case SYM_NOTEQ:{
        jj_consume_token(SYM_NOTEQ);
        break;
        }
      case SYM_GREAT:{
        jj_consume_token(SYM_GREAT);
        break;
        }
      case SYM_GREATEQ:{
        jj_consume_token(SYM_GREATEQ);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      AddOp();
    }
  }

  final public void AddOp() throws ParseException {
    MulOp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:{
        jj_consume_token(SYM_PLUS);
        break;
        }
      case SYM_MINUS:{
        jj_consume_token(SYM_MINUS);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      MulOp();
    }
  }

  final public void MulOp() throws ParseException {
    UnaryOp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIL:
      case SYM_DIVIDE:
      case SYM_MOD:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIL:{
        jj_consume_token(SYM_MULTIL);
        break;
        }
      case SYM_DIVIDE:{
        jj_consume_token(SYM_DIVIDE);
        break;
        }
      case SYM_MOD:{
        jj_consume_token(SYM_MOD);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      UnaryOp();
    }
  }

  final public void UnaryOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      UnaryOp();
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case IDENTIFIER:
    case INT_LITERAL:{
      PostfixOp();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void PostfixOp() throws ParseException {
    PrimaryExp();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACK:
      case SYM_DOT:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACK:{
        jj_consume_token(SYM_LBRACK);
        Expression();
        jj_consume_token(SYM_RBRACK);
        break;
        }
      case SYM_DOT:{
        jj_consume_token(SYM_DOT);
        Identifier();
        label_14:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SYM_LPAREN:{
            ;
            break;
            }
          default:
            jj_la1[24] = jj_gen;
            break label_14;
          }
          jj_consume_token(SYM_LPAREN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case KW_TRUE:
          case KW_FALSE:
          case KW_THIS:
          case KW_NEW:
          case SYM_LPAREN:
          case SYM_NOT:
          case IDENTIFIER:
          case INT_LITERAL:{
            Expression();
            label_15:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case SYM_COMMA:{
                ;
                break;
                }
              default:
                jj_la1[25] = jj_gen;
                break label_15;
              }
              jj_consume_token(SYM_COMMA);
              Expression();
            }
            break;
            }
          default:
            jj_la1[26] = jj_gen;
            ;
          }
          jj_consume_token(SYM_RPAREN);
        }
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void PrimaryExp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case IDENTIFIER:{
      Identifier();
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:{
        jj_consume_token(KW_INT);
        jj_consume_token(SYM_LBRACK);
        Expression();
        jj_consume_token(SYM_RBRACK);
        break;
        }
      case IDENTIFIER:{
        Identifier();
        jj_consume_token(SYM_LPAREN);
        jj_consume_token(SYM_RPAREN);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case SYM_LPAREN:{
      jj_consume_token(SYM_LPAREN);
      Expression();
      jj_consume_token(SYM_RPAREN);
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Identifier() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3_1()
 {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_30()
 {
    if (jj_3R_31()) return true;
    return false;
  }

  private boolean jj_3R_29()
 {
    if (jj_3R_30()) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    if (jj_3R_18()) return true;
    if (jj_scan_token(50)) return true;
    return false;
  }

  private boolean jj_3R_28()
 {
    if (jj_3R_29()) return true;
    return false;
  }

  private boolean jj_3R_38()
 {
    if (jj_scan_token(SYM_LPAREN)) return true;
    return false;
  }

  private boolean jj_3R_37()
 {
    if (jj_scan_token(KW_NEW)) return true;
    return false;
  }

  private boolean jj_3R_27()
 {
    if (jj_3R_28()) return true;
    return false;
  }

  private boolean jj_3R_34()
 {
    if (jj_3R_35()) return true;
    return false;
  }

  private boolean jj_3R_36()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_25()
 {
    if (jj_3R_27()) return true;
    return false;
  }

  private boolean jj_3R_23()
 {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_35()
 {
    if (jj_3R_36()) return true;
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(KW_SYSPRNT)) return true;
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(KW_WHILE)) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(KW_IF)) return true;
    return false;
  }

  private boolean jj_3R_19()
 {
    if (jj_scan_token(SYM_LBRACE)) return true;
    return false;
  }

  private boolean jj_3R_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_33()
 {
    if (jj_scan_token(SYM_NOT)) return true;
    return false;
  }

  private boolean jj_3R_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_33()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) return true;
    }
    return false;
  }

  private boolean jj_3R_26()
 {
    if (jj_scan_token(SYM_LBRACK)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(KW_ELSE)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3R_31()
 {
    if (jj_3R_32()) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_24()
 {
    if (jj_scan_token(KW_INT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) jj_scanpos = xsp;
    return false;
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[30];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xffffff00,0xffffff00,0x100,0x4000,0x30000,0x200,0x0,0x30000,0x17f40000,0x40000000,0x30000,0x17f40000,0x17f40000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x11e00000,0x40000000,0x10000000,0x0,0x11e00000,0x40000000,0x10000,0x11e00000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0xfffff,0xfffff,0x0,0x0,0x40000,0x0,0x20000,0x40000,0xc8000,0x0,0x40000,0xc8000,0xc8000,0x2,0xc,0xc,0x3f0,0x3f0,0xc00,0xc00,0x7000,0x7000,0xc8000,0x10000,0x0,0x20000,0xc8000,0x10000,0x40000,0xc0000,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;
